// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render a button 1`] = `
<button
  class="sc-bdfBwQ iPyZpa"
  color="primary"
>
  My button
</button>
`;

exports[`<Button /> should render a button with black color 1`] = `
<button
  class="sc-bdfBwQ cwpJDj"
  color="black"
>
  My button
</button>
`;

exports[`<Button /> should render a button with error color 1`] = `
<button
  class="sc-bdfBwQ fYLblI"
  color="error"
>
  My button
</button>
`;

exports[`<Button /> should render a button with grey color 1`] = `
<button
  class="sc-bdfBwQ kEshBj"
  color="grey"
>
  My button
</button>
`;

exports[`<Button /> should render a button with primary color 1`] = `
<button
  class="sc-bdfBwQ iPyZpa"
  color="primary"
>
  My button
</button>
`;

exports[`<Button /> should render a large button 1`] = `
<button
  class="sc-bdfBwQ hLjxpl"
  color="primary"
>
  My button
</button>
`;

exports[`<Button /> should render a medium button 1`] = `
<button
  class="sc-bdfBwQ iPyZpa"
  color="primary"
>
  My button
</button>
`;

exports[`<Button /> should render a small button 1`] = `
<button
  class="sc-bdfBwQ kHCIhK"
  color="primary"
>
  My button
</button>
`;

exports[`<Button /> should render a x-large button 1`] = `
<button
  class="sc-bdfBwQ hlKBmJ"
  color="primary"
>
  My button
</button>
`;
